<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/constraintLayoutKeyword">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:hint="@string/query"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/TextInputLayoutStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextKeywordQuery"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:textCursorDrawable="@drawable/cursor_drawable" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonFilter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/filter"
            app:backgroundTint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/search"
            app:backgroundTint="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayoutFilter" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutFilter"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="@+id/buttonFilter"
            app:layout_constraintStart_toStartOf="@+id/buttonFilter"
            app:layout_constraintTop_toBottomOf="@+id/buttonFilter"
            tools:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textLayoutLocationLatitude"
                style="@style/TextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin"
                android:hint="@string/location_latitude"
                app:layout_constraintEnd_toStartOf="@+id/textLayoutLocationLongitude"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextLocationLatitude"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:textCursorDrawable="@drawable/cursor_drawable" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textLayoutLocationLongitude"
                style="@style/TextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/location_longitude"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textLayoutLocationLatitude"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextLocationLongitude"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:textCursorDrawable="@drawable/cursor_drawable" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textLayoutNumber"
                style="@style/TextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:hint="@string/radius_1_50000"
                app:layout_constraintEnd_toStartOf="@+id/spinnerLocationType"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textLayoutLocationLatitude">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextRadius"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:inputType="number"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/spinnerLocationType"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layerType="software"
                android:spinnerMode="dialog"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textLayoutNumber"
                app:layout_constraintTop_toTopOf="@+id/textLayoutNumber" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewResult"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/buttonSearch"
            app:layout_constraintTop_toBottomOf="@+id/buttonSearch"
            tools:listitem="@layout/item_site" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>